notifications: mark all as read, gifs for no search results and no notifications, notification red dot on mobile fixed, text overflowing from cards fixed

--- a/app/assets/stylesheets/pages/_notifications.scss
+++ b/app/assets/stylesheets/pages/_notifications.scss
@@ -7,3 +7,14 @@
 h3 {
   margin-top: 0;
 }
+
+.no-notifications-gif,
+.no-search-results-gif {
+  width: 100%;
+}
+
+.mark-all-read {
+  &:hover {
+    background-color: #E7E7E8;
+  }
+}
